@@ -1,3 +1,8 @@
+2012-05-25  Ian Lance Taylor  <iant@google.com>
+
+	* config/i386/morestack.S (__morestack_non_split): Check whether
+	caller is varargs and needs %bp to hold the stack frame on return.
+
 2012-05-24  Olivier Hainque  <hainque@adacore.com>
 
 	* Makefile.in: Move dependency on install-unwind_h from
@@ -29,9 +34,9 @@
 
 2012-04-28  Aurelien Jarno  <aurelien@aurel32.net>
 
-	* config.host (mips64*-*-linux*, mipsisa64*-*-linux*): Remove. 
-	(mips*-*-linux*): Include mips/t-tpbit when long double is 
-	16 bytes long. 
+	* config.host (mips64*-*-linux*, mipsisa64*-*-linux*): Remove.
+	(mips*-*-linux*): Include mips/t-tpbit when long double is
+	16 bytes long.
 
 2012-04-20  Thomas Schwinge  <thomas@codesourcery.com>
 
